# MochaFunkin

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  FindLibVorbisfile.cmake  LICENSE  Makefile.nx  Makefile.wii  README.md
include/: animation.h  audio.h  camera.h  conductor.h  config.h  controls.h  engine.h  fnf_data.h  font.h  math_fnf.h  note.h  saves.h  shader.h  sprite.h  spriteutil.h  stage.h  states.h  stb_image.h  timer.h  types.h
include/glad/: glad.h
src/common/: glad.c  main.c
src/common/platform/: glad.c
src/engine/: animation.c  audio.c  camera.c  engine.c  font.c  math_fnf.c  saves.c  shader.c  sprite.c  timer.c
src/engine/gl/: audio.c  engine.c  font.c  sprite.c
src/engine/gl/1/: sprite.c
src/engine/gx/: audio.cpp  engine.c  font.c  shader.c  sprite.c
src/game/: conductor.c  freeplay_state.c  main_menu_state.c  playstate.c  spriteutil.c  statelogic.c  story_menu_state.c  titlestate.c
tools/: ss_scale.py
